Added proxy config for lasapi

--- a/conf/apache2/default_include.conf
+++ b/conf/apache2/default_include.conf
@@ -1,1 +1,5 @@
 DirectoryIndex index.php index.html index.htm
+# (01/3/2019) PJF
+# Setup access for "lasapi" link
+ProxyPass /lasapi http://api.liftalertonline.com
+ProxyPassReverse /lasapi http://api.liftalertonline.com
